test/1.2/errors/T_ENMETH.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
method init {
    /// ERROR ENMETH
    after (0.1) call 1;
    /// ERROR ENMETH
    after (0.1) call $dev;
    /// ERROR ENMETH
    call 1;
    /// ERROR ENMETH
    call $dev;
}
